--- a/css/style.css
+++ b/css/style.css
@@ -180,7 +180,7 @@ a {
 
 .social a {
     align-items: center;
-    color: green;
+    background-color: #fff;
     display: flex;
     font-size: 1.5rem;
     height: 2rem;
